# multi-agent-talk

./: .env.example  .gitignore  README.md  main.ts  package-lock.json  package.json  pyproject.toml  questions.md
docs/: questions.md  steps.md
src/talk/: __main__.py  crm.py  crm_agent.py  guardrails.py  logging.py  main_00.py  main_01.py  main_02.py  main_03.py  main_04.py  main_05.py  pim.py  pim_agent.py  tracing.py
